// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expenses summary with 1 Expense 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totalling 
    $2.34
  </h1>
</div>
`;

exports[`should correctly render Expenses summary with multiple Expenses 1`] = `
<div>
  <h1>
    viewing 
    56
     
    expenses
     totalling 
    $23,476,341.90
  </h1>
</div>
`;
